--- a/crates/router/Cargo.toml
+++ b/crates/router/Cargo.toml
@@ -51,6 +51,7 @@ bytes = "1.6.0"
 clap = { version = "4.4.18", default-features = false, features = ["std", "derive", "help", "usage"] }
 config = { version = "0.14.0", features = ["toml"] }
 cookie = "0.18.1"
+csv = "1.3.0"
 diesel = { version = "2.1.5", features = ["postgres"] }
 digest = "0.10.7"
 dyn-clone = "1.0.17"
