--- a/crates/api_models/Cargo.toml
+++ b/crates/api_models/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 license.workspace = true
 
 [features]
-default = []
+default = ["v1"]
 business_profile_routing = []
 connector_choice_bcompat = []
 errors = ["dep:actix-web", "dep:reqwest"]
@@ -22,6 +22,9 @@ olap = []
 openapi = ["common_enums/openapi", "olap", "backwards_compatibility", "business_profile_routing", "connector_choice_mca_id", "recon", "dummy_connector", "olap"]
 recon = []
 v2 = []
+v1 = []
+merchant_account_v2 = []
+payment_v2 = []
 
 [dependencies]
 actix-web = { version = "4.5.1", optional = true }
