--- a/crates/diesel_models/Cargo.toml
+++ b/crates/diesel_models/Cargo.toml
@@ -8,8 +8,12 @@ readme = "README.md"
 license.workspace = true
 
 [features]
-default = ["kv_store"]
+default = ["kv_store", "v1"]
 kv_store = []
+v1 = []
+v2 = []
+merchant_account_v2 = []
+payment_v2 = []
 
 [dependencies]
 async-bb8-diesel = { git = "https://github.com/jarnura/async-bb8-diesel", rev = "53b4ab901aab7635c8215fd1c2d542c8db443094" }
