--- a/crates/openapi/Cargo.toml
+++ b/crates/openapi/Cargo.toml
@@ -16,5 +16,6 @@ common_utils = { version = "0.1.0", path = "../common_utils" }
 router_env = { version = "0.1.0", path = "../router_env" }
 
 [features]
+default = ["v1"]
 v2 = ["api_models/v2"]
-default = []
+v1 = []
