--- a/.github/workflows/migration-check.yaml
+++ b/.github/workflows/migration-check.yaml
@@ -53,14 +53,31 @@ jobs:
           features: postgres
           args: "--no-default-features"
 
-      - name: Verify `diesel migration run`
-        shell: bash
-        env:
-          DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
-        run: make migrate locked-schema=yes
+      - uses: baptiste0928/cargo-install@v2.2.0
+        with:
+          crate: just
+          args: "--no-default-features"
 
-      - name: Verify `diesel migration redo`
+      - name: Verify `diesel migration run for v1`
         shell: bash
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
-        run: make redo_migrate locked-schema=yes
+        run: just migrate run --locked-schema --all
+
+      - name: Verify `diesel migration redo for v1`
+        shell: bash
+        env:
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+        run: just migrate redo --locked-schema --all
+
+      - name: Verify `diesel migration run for v2`
+        shell: bash
+        env:
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+        run: just migrate_v2 run --locked-schema --all
+
+      - name: Verify `diesel migration redo for v2`
+        shell: bash
+        env:
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+        run: just migrate_v2 redo --locked-schema --all
