--- a/.github/workflows/postman-collection-runner.yml
+++ b/.github/workflows/postman-collection-runner.yml
@@ -102,12 +102,17 @@ jobs:
           features: postgres
           args: "--no-default-features"
 
+      - uses: baptiste0928/cargo-install@v2.2.0
+        with:
+          crate: just
+          args: "--no-default-features"
+
       - name: Diesel migration run
         if: ${{ ((github.event_name == 'pull_request') && (github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name)) || (github.event_name == 'merge_group')}}
         shell: bash
         env:
           DATABASE_URL: postgres://db_user:db_pass@localhost:5432/hyperswitch_db
-        run: make migrate locked-schema=yes
+        run: just migrate run --locked-schema
 
       - name: Install newman from fork
         run: npm ci
