chore: address PR comments

--- a/.github/workflows/postman-collection-runner.yml
+++ b/.github/workflows/postman-collection-runner.yml
@@ -103,9 +103,9 @@ jobs:
           args: "--no-default-features"
 
       - uses: baptiste0928/cargo-install@v2.2.0
+        if: ${{ ((github.event_name == 'pull_request') && (github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name)) || (github.event_name == 'merge_group')}}
         with:
           crate: just
-          args: "--no-default-features"
 
       - name: Diesel migration run
         if: ${{ ((github.event_name == 'pull_request') && (github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name)) || (github.event_name == 'merge_group')}}
