--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -47,7 +47,7 @@ services:
 
   migration_runner:
     image: rust:latest
-    command: "bash -c 'cargo install diesel_cli --no-default-features --features postgres && make migrate'"
+    command: "bash -c 'cargo install diesel_cli --no-default-features --features postgres && cargo install just && just migrate'"
     working_dir: /app
     networks:
       - router_net
