--- a/crates/hyperswitch_connectors/Cargo.toml
+++ b/crates/hyperswitch_connectors/Cargo.toml
@@ -8,8 +8,10 @@ license.workspace = true
 [dependencies]
 async-trait = "0.1.79"
 error-stack = "0.4.1"
+nanoid = "0.4.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
+strum = { version = "0.26", features = ["derive"] }
 
 # First party crates
 api_models = { version = "0.1.0", path = "../api_models", features = ["errors"] }
