refactor(payout_link): enhance code by resolving comments

--- a/crates/router/Cargo.toml
+++ b/crates/router/Cargo.toml
@@ -57,6 +57,7 @@ dyn-clone = "1.0.17"
 encoding_rs = "0.8.33"
 error-stack = "0.4.1"
 futures = "0.3.30"
+globset = "0.4.14"
 hex = "0.4.3"
 http = "0.2.12"
 hyper = "0.14.28"
