--- a/config/dashboard.toml
+++ b/config/dashboard.toml
@@ -16,7 +16,7 @@ is_live_mode=false
 email=false
 quick_start=false
 audit_trail=true
-system_metrics=false
+system_metrics=true
 sample_data=false
 frm=false
 payout=true
