--- a/config/development.toml
+++ b/config/development.toml
@@ -621,7 +621,7 @@ soft_kill = false
 enabled = true
 
 [events]
-source = "logs"
+source = "kafka"
 
 [events.kafka]
 brokers = ["localhost:9092"]
@@ -639,7 +639,7 @@ consolidated_events_topic = "hyperswitch-consolidated-events"
 authentication_analytics_topic = "hyperswitch-authentication-events"
 
 [analytics]
-source = "sqlx"
+source = "clickhouse"
 
 [analytics.clickhouse]
 username = "default"
