--- a/config/dashboard.toml
+++ b/config/dashboard.toml
@@ -15,7 +15,7 @@ test_live_toggle=false
 is_live_mode=false
 email=false
 quick_start=false
-audit_trail=true
+audit_trail=false
 system_metrics=true
 sample_data=false
 frm=false
