reverted back changes

--- a/config/dashboard.toml
+++ b/config/dashboard.toml
@@ -15,8 +15,8 @@ test_live_toggle=false
 is_live_mode=false
 email=false
 quick_start=false
-audit_trail=false
-system_metrics=true
+audit_trail=true
+system_metrics=false
 sample_data=false
 frm=false
 payout=true
