--- a/crates/connector_configs/Cargo.toml
+++ b/crates/connector_configs/Cargo.toml
@@ -15,7 +15,10 @@ dummy_connector = ["api_models/dummy_connector", "development"]
 payouts = ["api_models/payouts"]
 
 [dependencies]
+# First party crates
 api_models = { version = "0.1.0", path = "../api_models", package = "api_models" }
+
+# Third party crates
 serde = { version = "1.0.197", features = ["derive"] }
 serde_with = "3.7.0"
 toml = "0.8.12"
