--- a/crates/storage_impl/Cargo.toml
+++ b/crates/storage_impl/Cargo.toml
@@ -15,7 +15,7 @@ olap = ["hyperswitch_domain_models/olap"]
 payouts = ["hyperswitch_domain_models/payouts"]
 v1 = ["api_models/v1", "diesel_models/v1", "hyperswitch_domain_models/v1"]
 v2 = ["api_models/v2", "diesel_models/v2", "hyperswitch_domain_models/v2"]
-payment_v2 = ["hyperswitch_domain_models/payment_v2"]
+payment_v2 = ["hyperswitch_domain_models/payment_v2", "diesel_models/payment_v2"]
 
 [dependencies]
 # First Party dependencies
