refactor: change CI push command

--- a/.github/workflows/CI-push.yml
+++ b/.github/workflows/CI-push.yml
@@ -148,6 +148,11 @@ jobs:
         with:
           crate: cargo-hack
 
+      - name: Install Just
+        uses: baptiste0928/cargo-install@v2.2.0
+        with:
+          crate: just
+
       # - name: Install cargo-nextest
       #   uses: baptiste0928/cargo-install@v2.2.0
       #   with:
@@ -169,12 +174,12 @@ jobs:
 
       - name: Run clippy
         shell: bash
-        run: cargo clippy --all-features --all-targets
+        run: just clippy
 
       - name: Cargo hack
         if: ${{ github.event_name == 'push' }}
         shell: bash
-        run: cargo hack check --workspace --each-feature --all-targets
+        run: just ci
 
       - name: Cargo build release
         if: ${{ github.event_name == 'merge_group' }}
