--- a/.github/workflows/CI-push.yml
+++ b/.github/workflows/CI-push.yml
@@ -89,7 +89,7 @@ jobs:
       - name: Cargo hack
         if: ${{ github.event_name == 'push' }}
         shell: bash
-        run: just ci
+        run: just ci_hack
 
       - name: Cargo build release
         if: ${{ github.event_name == 'merge_group' }}
@@ -180,7 +180,7 @@ jobs:
       - name: Cargo hack
         if: ${{ github.event_name == 'push' }}
         shell: bash
-        run: just ci
+        run: just ci_hack
 
       - name: Cargo build release
         if: ${{ github.event_name == 'merge_group' }}
