--- a/crates/hyperswitch_domain_models/Cargo.toml
+++ b/crates/hyperswitch_domain_models/Cargo.toml
@@ -8,10 +8,13 @@ readme = "README.md"
 license.workspace = true
 
 [features]
-default = ["olap", "payouts", "frm"]
+default = ["olap", "payouts", "frm", "v1"]
 olap = []
 payouts = ["api_models/payouts"]
 frm = ["api_models/frm"]
+v2 = ["api_models/v2", "diesel_models/v2"]
+v1 = ["api_models/v1", "diesel_models/v1"]
+customer_v2 = ["api_models/customer_v2", "diesel_models/customer_v2"]
 
 [dependencies]
 # First party deps
