--- a/crates/storage_impl/Cargo.toml
+++ b/crates/storage_impl/Cargo.toml
@@ -9,10 +9,12 @@ license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
-default = ["olap", "oltp"]
+default = ["olap", "oltp", "v1"]
 oltp = []
 olap = ["hyperswitch_domain_models/olap"]
 payouts = ["hyperswitch_domain_models/payouts"]
+v1 = ["api_models/v1", "diesel_models/v1", "hyperswitch_domain_models/v1"]
+v2 = ["api_models/v2", "diesel_models/v2", "hyperswitch_domain_models/v2"]
 
 [dependencies]
 # First Party dependencies
