ci: add support for compilation of code changes under v2 feature flag (#5329)
Co-authored-by: Narayan Bhat <narayan.bhat@juspay.in>

--- a/.github/workflows/CI-push.yml
+++ b/.github/workflows/CI-push.yml
@@ -81,10 +81,15 @@ jobs:
         shell: bash
         run: sed -i 's/rustflags = \[/rustflags = \[\n    "-Dwarnings",/' .cargo/config.toml
 
+      - name: Install Just
+        uses: baptiste0928/cargo-install@v2.2.0
+        with:
+          crate: just
+
       - name: Cargo hack
         if: ${{ github.event_name == 'push' }}
         shell: bash
-        run: cargo hack check --workspace --each-feature --all-targets
+        run: just ci_hack
 
       - name: Cargo build release
         if: ${{ github.event_name == 'merge_group' }}
@@ -143,6 +148,12 @@ jobs:
         with:
           crate: cargo-hack
 
+      - name: Install just
+        uses: taiki-e/install-action@v2.41.10
+        with:
+          tool: just
+          checksum: true
+
       # - name: Install cargo-nextest
       #   uses: baptiste0928/cargo-install@v2.2.0
       #   with:
@@ -164,12 +175,12 @@ jobs:
 
       - name: Run clippy
         shell: bash
-        run: cargo clippy --all-features --all-targets
+        run: just clippy
 
       - name: Cargo hack
         if: ${{ github.event_name == 'push' }}
         shell: bash
-        run: cargo hack check --workspace --each-feature --all-targets
+        run: just ci_hack
 
       - name: Cargo build release
         if: ${{ github.event_name == 'merge_group' }}
