fix(connector): Fixed order for connectors

--- a/config/deployments/production.toml
+++ b/config/deployments/production.toml
@@ -76,6 +76,7 @@ payone.base_url = "https://payment.payone.com/"
 paypal.base_url = "https://api-m.paypal.com/"
 payu.base_url = "https://secure.payu.com/api/"
 placetopay.base_url = "https://checkout.placetopay.com/rest/gateway"
+plaid.base_url = "https://production.plaid.com"
 powertranz.base_url = "https://staging.ptranz.com/api/"
 prophetpay.base_url = "https://ccm-thirdparty.cps.golf/"
 rapyd.base_url = "https://sandboxapi.rapyd.net"
