--- a/.github/workflows/CI-pr.yml
+++ b/.github/workflows/CI-pr.yml
@@ -95,6 +95,7 @@ jobs:
       matrix:
         runner:
           - ubuntu-latest
+          - ubuntu-24.04
           - hyperswitch-runners
 
     steps:
