ci(CI-pr): try out Ubuntu 24.04 runners for running stable toolchain checks

--- a/.github/workflows/CI-pr.yml
+++ b/.github/workflows/CI-pr.yml
@@ -179,6 +179,7 @@ jobs:
       matrix:
         runner:
           - ubuntu-latest
+          - ubuntu-24.04
           - hyperswitch-runners
 
     steps:
