--- a/crates/scheduler/Cargo.toml
+++ b/crates/scheduler/Cargo.toml
@@ -6,10 +6,11 @@ rust-version.workspace = true
 license.workspace = true
 
 [features]
-default = ["kv_store", "olap"]
+default = ["kv_store", "olap", "v1"]
 olap = ["storage_impl/olap", "hyperswitch_domain_models/olap"]
 kv_store = []
 email = ["external_services/email"]
+v1 = ["diesel_models/v1", "hyperswitch_domain_models/v1", "storage_impl/v1"]
 
 [dependencies]
 # Third party crates
