chore: Move v1 default imps and remove old helcim

--- a/crates/hyperswitch_connectors/Cargo.toml
+++ b/crates/hyperswitch_connectors/Cargo.toml
@@ -5,6 +5,11 @@ edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 
+[features]
+default = ["payouts", "frm"]
+frm = []
+payouts = []
+
 [dependencies]
 async-trait = "0.1.79"
 error-stack = "0.4.1"
