--- a/.github/workflows/CI-push.yml
+++ b/.github/workflows/CI-push.yml
@@ -77,6 +77,16 @@ jobs:
         with:
           crate: cargo-hack
 
+      - name: Install just
+        uses: taiki-e/install-action@v2.41.10
+        with:
+          tool: just
+          checksum: true
+
+      - name: Install jq
+        shell: bash
+        run: .github/scripts/install-jq.sh
+
       - name: Deny warnings
         shell: bash
         run: sed -i 's/rustflags = \[/rustflags = \[\n    "-Dwarnings",/' .cargo/config.toml
@@ -84,7 +94,7 @@ jobs:
       - name: Cargo hack
         if: ${{ github.event_name == 'push' }}
         shell: bash
-        run: cargo hack check --workspace --each-feature --all-targets
+        run: just ci_hack
 
       - name: Cargo build release
         if: ${{ github.event_name == 'merge_group' }}
@@ -143,6 +153,16 @@ jobs:
         with:
           crate: cargo-hack
 
+      - name: Install just
+        uses: taiki-e/install-action@v2.41.10
+        with:
+          tool: just
+          checksum: true
+
+      - name: Install jq
+        shell: bash
+        run: .github/scripts/install-jq.sh
+
       # - name: Install cargo-nextest
       #   uses: baptiste0928/cargo-install@v2.2.0
       #   with:
@@ -164,12 +184,12 @@ jobs:
 
       - name: Run clippy
         shell: bash
-        run: cargo clippy --all-features --all-targets
+        run: just clippy
 
       - name: Cargo hack
         if: ${{ github.event_name == 'push' }}
         shell: bash
-        run: cargo hack check --workspace --each-feature --all-targets
+        run: just ci_hack
 
       - name: Cargo build release
         if: ${{ github.event_name == 'merge_group' }}
