--- a/crates/analytics/Cargo.toml
+++ b/crates/analytics/Cargo.toml
@@ -6,6 +6,11 @@ edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 
+[features]
+default = ["v1"]
+v1 = ["api_models/v1", "diesel_models/v1", "hyperswitch_domain_models/v1", "storage_impl/v1"]
+v2 = ["api_models/v2", "diesel_models/v2", "hyperswitch_domain_models/v2", "storage_impl/v2"]
+
 [dependencies]
 # First party crates
 api_models = { version = "0.1.0", path = "../api_models", features = ["errors"] }
