--- a/crates/hyperswitch_domain_models/Cargo.toml
+++ b/crates/hyperswitch_domain_models/Cargo.toml
@@ -8,18 +8,22 @@ readme = "README.md"
 license.workspace = true
 
 [features]
-default = ["olap", "payouts", "frm"]
-encryption_service =[]
+default = ["olap", "payouts", "frm", "v1"]
+encryption_service = []
 olap = []
 payouts = ["api_models/payouts"]
 frm = ["api_models/frm"]
+v2 = ["api_models/v2", "diesel_models/v2"]
+v1 = ["api_models/v1", "diesel_models/v1"]
+merchant_account_v2 = ["api_models/merchant_account_v2", "diesel_models/merchant_account_v2"]
+payment_v2 = ["api_models/payment_v2", "diesel_models/payment_v2"]
 
 [dependencies]
 # First party deps
 api_models = { version = "0.1.0", path = "../api_models", features = ["errors"] }
 cards = { version = "0.1.0", path = "../cards" }
 common_enums = { version = "0.1.0", path = "../common_enums" }
-common_utils = { version = "0.1.0", path = "../common_utils", features = ["async_ext", "metrics",  "encryption_service", "keymanager"] }
+common_utils = { version = "0.1.0", path = "../common_utils", features = ["async_ext", "metrics", "encryption_service", "keymanager"] }
 diesel_models = { version = "0.1.0", path = "../diesel_models", features = ["kv_store"] }
 masking = { version = "0.1.0", path = "../masking" }
 router_derive = { version = "0.1.0", path = "../router_derive" }
